--- a/.github/old-workflows/pre133-generator-linux.yml
+++ b/.github/old-workflows/pre133-generator-linux.yml
@@ -88,7 +88,7 @@ env:
 
 jobs:
   generate-bridge-linux:
-    uses: ./.github/workflows/bridge.yml
+    uses: ./.github/workflows/pre137-bridge.yml
     with:
       version: ${{ fromJson(inputs.extras).version }}
 
