--- a/.github/workflows/generator-macos.yml
+++ b/.github/workflows/generator-macos.yml
@@ -169,8 +169,8 @@ jobs:
           sed -i '' -e 's|<key>CFBundleName</key>.*<string>.*</string>|<key>CFBundleName</key>\n\t<string>${{ inputs.appname }}</string>|' ./flutter/macos/Runner/Info.plist
           sed -i '' -e 's|<key>CFBundleDisplayName</key>.*<string>.*</string>|<key>CFBundleDisplayName</key>\n\t<string>${{ inputs.appname }}</string>|' ./flutter/macos/Runner/Info.plist
           sed -i '' -e 's|<key>CFBundleIdentifier</key>.*<string>.*</string>|<key>CFBundleIdentifier</key>\n\t<string>com.${{ inputs.appname }}.app</string>|' ./flutter/macos/Runner/Info.plist
-          sed -i '' -e 's|<key>NSHumanReadableCopyright</key>.*<string>.*</string>|<key>NSHumanReadableCopyright</key>\n\t<string>Copyright 2025 ${{ inputs.appname }}. All rights reserved.</string>|' ./flutter/macos/Runner/Info.plist
-
+          sed -i '' '/<key>NSHumanReadableCopyright<\/key>/{n;s/<string>.*<\/string>/<string>Copyright 2025 ${{ inputs.appname }}. All rights reserved.<\/string>/;}' flutter/macos/Runner/Info.plist
+          
           # MACSTUFF Update AppInfo.xcconfig
           sed -i '' -e 's|PRODUCT_NAME = .*|PRODUCT_NAME = ${{ inputs.appname }}|' ./flutter/macos/Runner/Configs/AppInfo.xcconfig
           sed -i '' -e 's|PRODUCT_BUNDLE_IDENTIFIER = .*|PRODUCT_BUNDLE_IDENTIFIER = com.${{ inputs.appname }}.app|' ./flutter/macos/Runner/Configs/AppInfo.xcconfig
@@ -214,16 +214,6 @@ jobs:
           mv ./flutter/pubspec.yaml.tmp ./flutter/pubspec.yaml
           rm ./flutter/temp_dependency.txt
 
-          # Update desktop_setting_page.dart copyright
-          sed -i '' $'s/Copyright \\${DateTime\\.now().toString()\\.substring(0, 4)} Purslane Ltd\\./Copyright \\${DateTime.now().toString().substring(0, 4)} ${{ inputs.appname }}/g' ./flutter/lib/desktop/pages/desktop_setting_page.dart
-          
-          # Update additional copyright references in project.pbxproj
-          sed -i '' -e 's/PRODUCT_COPYRIGHT = "Copyright.*"/PRODUCT_COPYRIGHT = "Copyright 2025 ${{ inputs.appname }}. All rights reserved."/' ./flutter/macos/Runner.xcodeproj/project.pbxproj
-          
-          # Update any copyright strings in Runner.rc if it exists
-          if [ -f "./flutter/macos/Runner/Runner.rc" ]; then
-            sed -i '' -e 's|"Copyright.*"|"Copyright 2025 ${{ inputs.appname }}. All rights reserved."|' ./flutter/macos/Runner/Runner.rc
-          fi
 
       - name: Report Status - Pre Build
         uses: fjogeleit/http-request-action@v1
